ecmascript/parser/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames49_ES5/input.ts.stderr
error: A `set` accessor must have a corresponding `get` accessor
  --> $DIR/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames49_ES5/input.ts:10:9
   |
10 |     set [1 + 1]() {
   |         ^^^^^^^

